crates/openehr-serde/tests/snapshots/full_rm_canonical_json__PARTY_REF.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "PARTY_REF",
  "namespace": "demographic",
  "type": "PERSON",
  "id": {
    "_type": "HIER_OBJECT_ID",
    "value": "0e04d3af-0f8a-4be3-90a0-4a34fc94b21e"
  }
}
