crates/openehr-serde/tests/snapshots/full_rm_canonical_json__PARTY_RELATED.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "PARTY_RELATED",
  "name": "J. Jansen",
  "relationship": {
    "_type": "DV_CODED_TEXT",
    "value": "mother",
    "defining_code": {
      "_type": "CODE_PHRASE",
      "terminology_id": {
        "_type": "TERMINOLOGY_ID",
        "value": "openehr"
      },
      "code_string": "10"
    }
  }
}
