crates/openehr-serde/tests/snapshots/full_rm_canonical_json__PARTY_RELATIONSHIP.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "PARTY_RELATIONSHIP",
  "name": {
    "_type": "DV_TEXT",
    "value": "mother of"
  },
  "archetype_node_id": "at0001",
  "target": {
    "_type": "PARTY_REF",
    "namespace": "demographic",
    "type": "PERSON",
    "id": {
      "_type": "HIER_OBJECT_ID",
      "value": "0e04d3af-0f8a-4be3-90a0-4a34fc94b21e"
    }
  },
  "source": {
    "_type": "PARTY_REF",
    "namespace": "demographic",
    "type": "PERSON",
    "id": {
      "_type": "HIER_OBJECT_ID",
      "value": "cf6bf7d0-9d1a-4c8b-a0c9-3f7bb31e83c2"
    }
  }
}
