crates/openehr-serde/tests/snapshots/full_rm_canonical_json__POINT_EVENT.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "POINT_EVENT",
  "name": {
    "_type": "DV_TEXT",
    "value": "point"
  },
  "archetype_node_id": "at0005",
  "time": {
    "_type": "DV_DATE_TIME",
    "value": "2026-07-02T10:00:00Z"
  },
  "data": {
    "_type": "ITEM_TREE",
    "name": {
      "_type": "DV_TEXT",
      "value": "data"
    },
    "archetype_node_id": "at0003"
  }
}
