crates/openehr-serde/tests/snapshots/full_rm_canonical_json__RESOURCE_DESCRIPTION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "RESOURCE_DESCRIPTION",
  "original_author": {
    "name": "T. Author"
  },
  "lifecycle_state": "published",
  "parent_resource": {},
  "details": [
    {
      "_type": "RESOURCE_DESCRIPTION_ITEM",
      "language": {
        "terminology_id": "ISO_639-1",
        "code_string": "en",
        "uri": {
          "_type": "URI",
          "value": "http://example.org/terminology/en"
        }
      },
      "purpose": "Recording an encounter",
      "other_details": {}
    }
  ]
}
